// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AgentTerminalCanvas OpenTUI renderer keeps native chrome outside the %sx%s framebuffer 1`] = `
" mission-control · live
 0:agents 1:shell
tmux framebuffer 80x22




















 /blocked 1/3"
`;

exports[`AgentTerminalCanvas OpenTUI renderer keeps native chrome outside the %sx%s framebuffer 2`] = `
" mission-control · live
 0:agents 1:shell
tmux framebuffer 120x38




































 /blocked 1/3"
`;

exports[`AgentTerminalCanvas OpenTUI renderer keeps native chrome outside the %sx%s framebuffer 3`] = `
" mission-control · live
 0:agents 1:shell
tmux framebuffer 200x58
























































 /blocked 1/3"
`;
